tests/sources/invalid/classes/constructor_call_arg_count.fire
// Semantic error: 'new ClassName(...)' with the wrong number of arguments
// for the declared constructor.

class Point {
    int32 x;
    int32 y;

    Point(int32 x, int32 y) {
        this.x = x;
        this.y = y;
    }
}

void constructor_call_arg_count() {
    Point p = new Point(5);  //~ ERROR FS-SEM-0010 @19
}
